@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-10-18T01:17:39Z",
+  "timestamp" : "2023-10-20T08:22:25Z",
   "count_outdated" : 57,
   "uniques_outdated" : 43,
-  "count" : 62,
-  "uniques" : 46,
+  "count" : 63,
+  "uniques" : 47,
   "clones" : [
     {
       "timestamp": "2023-10-10T00:00:00Z",
@@ -28,6 +28,15 @@
       "count": 2,
       "count_minmax": [ 2, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-10-20T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
