@@ -1,6 +1,6 @@
 {
-  "count": 5,
-  "uniques": 3,
+  "count": 6,
+  "uniques": 4,
   "clones": [
     {
       "timestamp": "2023-10-10T00:00:00Z",
@@ -15,6 +15,11 @@
     {
       "timestamp": "2023-10-17T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-10-20T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
